# altv-js-module

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  PromiseRejections.cpp  README.md  V8BindHelpers.h  V8Class.cpp  V8Class.h  V8Entity.h  V8Helpers.cpp  V8Helpers.h  V8Module.h  V8ResourceImpl.cpp  V8ResourceImpl.h  V8Timer.h  bindings.d.ts  build.sh  deploy.bat  generate.bat
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.md  feature_request.yaml
.github/workflows/: build-deploy.yml  cmake.yml  test-changes.yml  test-client.yml  test-server.yml
bindings/: BaseObject.cpp  Entity.cpp  File.cpp  Main.cpp  RGBA.cpp  Vector2.cpp  Vector3.cpp  WorldObject.cpp
client/: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-debug.bat  build.bat
client/.github/workflows/: cmake.yml
client/cmake/: DepsDownload.cmake
client/src/: CPlatform.cpp  CPlatform.h  CV8Resource.cpp  CV8Resource.h  CV8ScriptRuntime.cpp  CV8ScriptRuntime.h  IImportHandler.cpp  IImportHandler.h  PromiseRejections.cpp  PromiseRejections.h  bootstrap.js  main.cpp
client/src/bindings/: Audio.cpp  AudioCategory.cpp  AudioFilter.cpp  AudioOutput.cpp  AudioOutputAttached.cpp  AudioOutputFrontend.cpp  AudioOutputWorld.cpp  Blip.cpp  Checkpoint.cpp  ClientBindingsMain.cpp  Discord.cpp  FocusData.cpp  Font.cpp  Handling.cpp  HandlingData.cpp  HttpClient.cpp  LocalObject.cpp  LocalPed.cpp  LocalPlayer.cpp  LocalStorage.cpp  LocalVehicle.cpp  Main.cpp  MapZoomData.cpp  Marker.cpp  MemoryBuffer.cpp  NetworkObject.cpp  Object.cpp  Object.js  Ped.cpp  Player.cpp  Profiler.cpp  RmlDocument.cpp  RmlElement.cpp  RmlUi.cpp  TextLabel.cpp  V8Natives.cpp  Vehicle.cpp  VirtualEntity.cpp  VirtualEntityGroup.cpp  Voice.cpp  (+5 more)
client/src/bindings/browser/: Console.js  TextDecoder.cpp  TextDecoder.js  TextEncoder.cpp  TextEncoder.js  Timers.js
client/src/bindings/workers/: CWorker.cpp  CWorker.h
client/src/events/: ClientEventsMain.cpp  Entity.cpp  Events.h  Main.cpp  Meta.cpp  Resource.cpp  Vehicle.cpp  WorldObject.cpp
client/src/inspector/: CV8InspectorChannel.h  CV8InspectorClient.h
client/src/workers/: CEventHandler.cpp  CEventHandler.h  CWorker.cpp  CWorker.h  Globals.cpp  Globals.h  WorkerPromiseRejections.cpp  WorkerPromiseRejections.h  WorkerTimer.h
client/tools/: deinit-cppsdk.bat
docs/: README.md  building.md  contributing.md  troubleshooting.md  updating-v8.md
events/: Main.cpp
server/: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-debug.bat  build.bat  build.sh  generate.bat
server/cmake/: DepsDownload.cmake
server/src/: CNodeResourceImpl.cpp  CNodeResourceImpl.h  CNodeScriptRuntime.cpp  CNodeScriptRuntime.h  Log.h  bootstrap.js  node-module.cpp  stdafx.h
server/src/bindings/: Blip.cpp  Checkpoint.cpp  ColShape.cpp  ConnectionInfo.cpp  Main.cpp  NetworkObject.cpp  Object.cpp  Ped.cpp  Player.cpp  Vehicle.cpp  VirtualEntity.cpp  VirtualEntityGroup.cpp  VoiceChannel.cpp
server/src/bindings/vehicle/: Appearance.h  Damage.h  GameState.h  Health.h  ScriptGameState.h
server/src/events/: Main.cpp  Ped.cpp  Player.cpp  Vehicle.cpp
server/tools/: altv-v8-tool.exe.REMOVED.git-id  nodejsdefs.js
shared/: CProfiler.h  IEntityManager.cpp  IEntityManager.h  IRuntimeEventHandler.h  JSBindings.h  Log.cpp  Log.h  PromiseRejections.cpp  PromiseRejections.h  Serialization.cpp  Serialization.h  V8BindHelpers.h  V8Class.cpp  V8Class.h  V8Entity.h  V8FastFunction.cpp  V8FastFunction.h  V8Helpers.cpp  V8Helpers.h  V8Module.h  V8ResourceImpl.cpp  V8ResourceImpl.h  V8Timer.h
shared/bindings/: BaseObject.cpp  BindingsMain.cpp  Blip.cpp  ColShape.cpp  Entity.cpp  File.cpp  InspectPolyfill.js  Logging.js  Main.cpp  Main.js  Marker.cpp  Quaternion.cpp  Quaternion.js  RGBA.cpp  RGBA.js  Resource.cpp  Utils.cpp  Utils.js  Vector2.cpp  Vector2.js  Vector3.cpp  Vector3.js  VirtualEntity.cpp  VirtualEntityGroup.cpp  WorldObject.cpp
shared/cmake/: DepsHelpers.cmake  GenerateBindings.cmake  generate-bindings.bat  generate-bindings.sh
shared/events/: EventsMain.cpp  Main.cpp  Player.cpp  Resource.cpp
shared/helpers/: BindHelpers.h  Bindings.cpp  Bindings.h  Convert.cpp  Convert.h  Macros.h  Serialization.cpp  Serialization.h  SourceMap.cpp  SourceMap.h
src/: CNodeResourceImpl.cpp  CNodeResourceImpl.h  CNodeScriptRuntime.cpp  CNodeScriptRuntime.h  CV8Resource.cpp  CV8Resource.h  CV8ScriptRuntime.cpp  CV8ScriptRuntime.h  main.cpp  node-module.cpp  stdafx.h
src/bindings/: Audio.cpp  Blip.cpp  Checkpoint.cpp  ColShape.cpp  Discord.cpp  Handling.cpp  HandlingData.cpp  HttpClient.cpp  LocalPlayer.cpp  LocalStorage.cpp  Main.cpp  MapZoomData.cpp  MemoryBuffer.cpp  Player.cpp  Profiler.cpp  V8Natives.cpp  Vehicle.cpp  Voice.cpp  VoiceChannel.cpp  WebSocketClient.cpp  WebView.cpp
src/bindings/vehicle/: Appearance.h  Damage.h  GameState.h  Health.h  ScriptGameState.h
src/events/: Entity.cpp  Events.h  Main.cpp  Meta.cpp  Player.cpp  Resource.cpp  Vehicle.cpp
tools/: README.md  build-debug.bat  build.bat  convert-bindings.js  deinit-cppsdk.bat  profiler.js
